sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:9: error: not found: value j
       j = i
       ^AlgShellSort:10: error: not found: value j
       while(j >= h && getValue(j - gap) > v){
             ^AlgShellSort:10: error: not found: value h
       while(j >= h && getValue(j - gap) > v){
                  ^AlgShellSort:10: error: not found: value j
       while(j >= h && getValue(j - gap) > v){
                                ^AlgShellSort:11: error: missing arguments for method getValue in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
         getValue(j) = getValue(j - gap)
         ^AlgShellSort:11: error: not found: value j
         getValue(j) = getValue(j - gap)
                  ^AlgShellSort:11: error: not found: value j
         getValue(j) = getValue(j - gap)
                                ^AlgShellSort:12: error: not found: value j
         j = j - gap
         ^AlgShellSort:14: error: missing arguments for method getValue in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
       getValue(j) = v
       ^AlgShellSort:14: error: not found: value j
       getValue(j) = v
                ^