sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var gap:Int = getValueCount() / 2
  var position:Int = 0
  var v:Int = 0
  for(k <- 0 to 16){
    for(i <- gap to getValueCount() - 1){
       v = getValue(i)
       j = i
       while(j >= h && getValue(j - gap) > v){
         getValue(j) = getValue(j - gap)
         j = j - gap
       }
       getValue(j) = v
    }
    gap /= 2
  }
}